--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     "react/": "https://esm.sh/react@^19.2.1/",
     "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
     "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
-    "@mediapipe/tasks-vision": "https://esm.sh/@mediapipe/tasks-vision@^0.10.22-rc.20250304",
+    "@mediapipe/tasks-vision": "https://esm.sh/@mediapipe/tasks-vision@0.10.18",
     "lucide-react": "https://esm.sh/lucide-react@^0.559.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.1/"
   }
